src/test/resources/de/cd4analysis/cocos/invalid/XXXNoCode4.cd
package de.cd4analysis.cocos;

classdiagram XXXNoCode4 {
  class C {
    String a;
    String a;
    String b;
    int b;
  }
}